--- a/src/content/blog/wc-is-ready.mdx
+++ b/src/content/blog/wc-is-ready.mdx
@@ -1,6 +1,6 @@
 ---
 title: Web Component is ready in 2024
-excerpt: In 2024, web components have emerged as a mature and powerful toolset for modern web development. Initially introduced by the W3C to enhance the modularity and reusability of code, web components have since evolved into a core technology, embraced by developers and major frameworks alike. With their ability to encapsulate HTML, CSS, and JavaScript, they offer an elegant solution to building custom, reusable elements that work seamlessly across all browsers without the need for third-party libraries.
+excerpt: In 2024, web components have emerged as a mature and powerful toolset for modern web development. Initially introduced by the W3C to enhance the modularity and reusability of code, web components have since evolved into a core technology, embraced by developers and major frameworks alike.
 publishDate: 2024/09/09
 tags:
   - web component
@@ -11,6 +11,35 @@ seo:
 ---
 
 In 2024, web components have emerged as a mature and powerful toolset for modern web development. Initially introduced by the W3C to enhance the modularity and reusability of code, web components have since evolved into a core technology, embraced by developers and major frameworks alike. With their ability to encapsulate HTML, CSS, and JavaScript, they offer an elegant solution to building custom, reusable elements that work seamlessly across all browsers without the need for third-party libraries.
+
+## The cost of a Button component
+
+![the cost of a solid button component](/images/wc-is-ready/img0.png)
+
+> Let’s imagine you combine a designer, engineer and QA specialist to design, build, and test these buttons.
+> If these staff cost $100/hr, and it takes this team of three 200 hours combined to design, build and test buttons at this level of quality, then buttons cost $20,000.
+>
+> 200 hrs × $100/hr = $20,000 for Buttons
+>
+> If your enterprise has 50 teams each making buttons, then it costs your enterprise $1,000,000 to have good buttons.
+>
+> $20,000 × 50 teams = $1,000,000 for Buttons
+
+The fact here is implementing and maintaining a solid and robust UI component is not easy, even though you try to use the 3rd party solution, the additional cost also existed in the duplicated works regarding to the customization for specific requirements.
+
+In general, to implement a business component based on 3rd party solution to a desired behavior based on some requirements, the cost will be:
+
+8 hrs x $100/hr = $800 for Per Business Component
+
+If the group or department has 10 project for the same business component, the cost will be
+
+$800 x 10 teams = $8,000 for Per Business Component
+
+Projects within a group or department tend to have duplicated business components because the nature of the business is often similar or the same across a standalone department.
+
+So about "how to resolve the reusability of these UI component?", it is a major tech topic that frontend community have discussed for few years.
+
+Especially for the frameworks related to the modern frontend development, like React started at 2014, in past 10 years, the frontend development evolved frequently and rapidly, there are more and more projects have suffered from the vendor lock-in issue.
 
 ## The Frameworks Popularity of 2023
 
