--- a/src/content/blog/wc-is-ready.mdx
+++ b/src/content/blog/wc-is-ready.mdx
@@ -8,6 +8,7 @@ seo:
   image:
     src: '/images/wc/excerpt.jpg'
     alt: 'Web Component is ready in 2024'
+isFeatured: true
 ---
 
 In 2024, web components have emerged as a mature and powerful toolset for modern web development. Initially introduced by the W3C to enhance the modularity and reusability of code, web components have since evolved into a core technology, embraced by developers and major frameworks alike. With their ability to encapsulate HTML, CSS, and JavaScript, they offer an elegant solution to building custom, reusable elements that work seamlessly across all browsers without the need for third-party libraries.
@@ -201,6 +202,17 @@ So, this proves that the tool layer is also aware of the issue, and various fram
 - [single-spa](https://single-spa.js.org/docs/getting-started-overview)
   - single-spa is a framework for bringing together multiple JavaScript microfrontends in a frontend application.
   - although its name is include "spa", it supports ssr currently which enable micro frontends to several meta frameworks like Next.js or Nuxt.js, see.
+
+### Universal Frameworks
+
+"universal" means these framework try to achieve framework agnostic pattern by compiling several components as output according to the existed popular MVVM frameworks spec.
+
+- [stencil](https://stenciljs.com/)
+
+  - Stencil is a library for building reusable, scalable component libraries. Generate small, blazing fast Web Components that run everywhere.
+
+- [mitosis](https://mitosis.builder.io/)
+  - Mitosis provides a unified development experience across all frameworks, enabling you to build components in a single codebase and compile them to React, Vue, Angular, Svelte, Solid, Alpine, Qwik, and more.
 
 ## Reference
 
