--- a/src/content/blog/wc-is-ready.mdx
+++ b/src/content/blog/wc-is-ready.mdx
@@ -168,6 +168,8 @@ Web Component is a suite of different technologies allowing you to create reusa
   - Shoelace is a UI library based on Lit and first-class support for React
 - [Material Web](https://github.com/material-components/material-web)
   - The material design V3 components library based on lit.
+- [Enhance](https://enhance.dev/)
+  - Enhance is an HTML-first full-stack web framework that gives you everything you need to build standards-based multi-page web apps that perform and scale.
 
 ### MVVM Frameworks
 
